<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_detailed"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="com.example.mastro.selfit.DetailedClassActivity">


    <RelativeLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bb_darkBackgroundColor"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/r1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/linearLayout"
            android:layout_below="@+id/textView"
            android:layout_marginEnd="2dp"
            android:layout_marginTop="15dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginBottom="5dp"
                android:text="@string/fill"
                android:textAlignment="center"
                android:textColor="@color/colorSecoundary" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text="@string/Price"
                android:textAlignment="center"
                android:textColor="@color/colorSecoundary" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/r2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginBottom="5dp"
                android:text="@string/fill"
                android:textAlignment="center"
                android:textColor="@color/colorSecoundary" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text="@string/Trainer"
                android:textAlignment="center"
                android:textColor="@color/colorSecoundary" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/r3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/linearLayout"
            android:layout_below="@+id/textView"
            android:layout_marginStart="2dp"
            android:layout_marginTop="15dp"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:text="@string/fill"
                android:textAlignment="center"
                android:textColor="@color/colorSecoundary" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Dificulty"
                android:textAlignment="center"
                android:textColor="@color/colorSecoundary" />


        </LinearLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="100dp"
            android:text="@string/Class"
            android:textColor="@color/colorSecoundary"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView2"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="35dp"
            android:layout_marginTop="35dp"
            android:text="@string/Horario"
            android:textColor="@color/colorSecoundary"
            android:textSize="18sp" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="59dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true">

            <ImageButton
                android:id="@+id/locationButton"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginBottom="15dp"
                android:layout_marginEnd="45dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                app:srcCompat="@drawable/ic_place_white_24px" />

            <Button
                android:id="@+id/addButton"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/add_round_button"
                android:text="@string/Add"
                android:textAlignment="gravity"
                android:textColor="@color/bb_darkBackgroundColor"
                android:textSize="12sp" />

            <ImageButton
                android:id="@+id/infoButton"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="45dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                app:srcCompat="@drawable/ic_info_outline_white_24px" />

        </LinearLayout>
    </RelativeLayout>

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

</RelativeLayout>