<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light">

    <!-- android:background="@drawable/back" -->

    <!-- cheat code: negative margin -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/informations_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="7dp"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="15dp"
        android:weightSum="1"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"

            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <ImageView
                android:id="@+id/profileImage"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="9dp"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/nameHolder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="20dp"
                android:layout_toEndOf="@+id/profileImage"
                android:gravity="center"
                android:lines="1"
                android:maxLength="16"
                android:maxLines="1"
                android:minLines="1"
                android:text="@string/Name"
                android:textColor="@color/bb_darkBackgroundColor"
                android:textSize="26sp"
                android:textStyle="normal|bold" />

            <TextView
                android:id="@+id/followUnfollow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/nameHolder"
                android:layout_below="@+id/nameHolder"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:paddingBottom="3dp"
                android:paddingTop="3dp"
                android:text="@string/UnFollow"
                android:textColor="@color/bb_darkBackgroundColor"
                android:textSize="14sp" />

            <!-- android:src="@drawable/profile" -->

        </RelativeLayout>

        <TextView
            android:id="@+id/classlink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:clickable="true"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="5dp"
            android:text="@string/ClassP"
            android:textColor="@color/bb_darkBackgroundColor"
            android:textSize="18sp" />

        <View
            android:id="@+id/view1"
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="25dp"
            android:layout_marginTop="25dp"
            android:background="#ff9703" />


        <TextView
            android:id="@+id/planlink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:clickable="true"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/Plans"
            android:textColor="@color/bb_darkBackgroundColor"
            android:textSize="18sp" />

        <View
            android:id="@+id/view2"
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="25dp"
            android:layout_marginTop="25dp"
            android:background="#ff9703" />


        <TextView
            android:id="@+id/contactlink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:clickable="true"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/Contact"
            android:textColor="@color/bb_darkBackgroundColor"
            android:textSize="18sp" />


    </LinearLayout>

    <!--ProgressBar
        android:id="@+id/progress_bar_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"/-->

    </RelativeLayout>

</android.support.v4.widget.NestedScrollView>