<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context="com.example.mastro.selfit.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorSecoundary">

        <TextView
            android:id="@+id/priceInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/nameInfo"
            android:layout_alignTop="@+id/textView12"
            android:textColor="@color/bb_darkBackgroundColor" />

        <TextView
            android:id="@+id/nameInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/textView11"
            android:layout_marginStart="54dp"
            android:layout_toEndOf="@+id/textView12"
            android:textColor="@color/bb_darkBackgroundColor" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="135dp"
            android:layout_marginTop="26dp"
            android:text="@string/PlanName"
            android:textColor="@color/bb_darkBackgroundColor"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView11"
            android:layout_below="@+id/textView11"
            android:layout_marginTop="17dp"
            android:text="@string/Price"
            android:textColor="@color/bb_darkBackgroundColor"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="105dp"
            android:elevation="5dp"
            android:gravity="center_vertical"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:text="@string/Plans"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="30sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true" />

</LinearLayout>